# ur5_gazebo

./: .env.example  .gitignore  README.md
docs/: development_workflow_checklist.md  m1_gazebo_bringup.md  m2_robotiq_2f85_gazebo_notes.md  m3_tabletop_objects_world_state.md  m4_moveit2_rviz_control.md  m5_motion_planning_notes.md  m5_skill_executor_mvp.md  m6_llm_atomic_planning_prompt.md  m6_local_llm_planner.md  m7_web_ui_mvp.md  system_architecture.md
scripts/: check_env.sh  setup_m8_stt.sh  setup_ubuntu22_humble.sh  start_project_ollama.sh
src/moveit_skill_server/: CMakeLists.txt  package.xml
src/moveit_skill_server/src/: moveit_skill_server_node.cpp
src/moveit_skill_server/srv/: MoveToPose.srv
src/skill_library/: CMakeLists.txt  package.xml
src/skill_library/config/planning/: prompt_policy.yaml
src/skill_library/config/skills/: attach_object.yaml  close_gripper.yaml  detach_object.yaml  lift.yaml  move_above_object.yaml  move_ready.yaml  move_to_object.yaml  move_to_region.yaml  observe_scene.yaml  open_gripper.yaml  pick.yaml  place.yaml  push.yaml  stack.yaml  verify_region.yaml  verify_relation.yaml
src/task_executor/: CMakeLists.txt  package.xml
src/task_executor/examples/: auto_pick_blue_mvp.json  auto_pick_place_blue_left_mvp.json  auto_stack_blue_on_green_mvp.json  pick_blue_mvp.json  place_current_mvp.json
src/task_executor/scripts/: execute_skill_plan.py  generate_skill_plan.py  web_task_ui.py
src/ur5_description/: CMakeLists.txt  package.xml
src/ur5_description/launch/: display.launch.py
src/ur5_description/rviz/: ur5_display.rviz
src/ur5_description/urdf/: ifra_robotiq_2f85_macro.urdf.xacro  ur5.urdf.xacro  ur5_ros2_control.xacro
src/ur5_gazebo/: CMakeLists.txt  package.xml
src/ur5_gazebo/config/: ros2_controllers.yaml
src/ur5_gazebo/launch/: full_bringup.launch.py  sim.launch.py
src/ur5_gazebo/scripts/: check_moveit_start_state.py  grasp_target.py  print_world_state.py  render_urdf.py  send_gripper_open_close.py  send_ready_trajectory.py  sim_grasp_adapter.py
src/ur5_gazebo/worlds/: empty_workcell.world
src/ur5_moveit_config/: CMakeLists.txt  package.xml
src/ur5_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor.yaml  trajectory_execution.yaml  ur5.srdf
src/ur5_moveit_config/launch/: moveit_rviz.launch.py
src/ur5_moveit_config/rviz/: moveit.rviz
