<?xml version="1.0"?>
<package format="3">
  <name>task_executor</name>
  <version>0.1.0</version>
  <description>MVP skill plan validator and executor for UR5 tabletop tasks.</description>
  <maintainer email="user@example.com">UR5 Sim Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_skill_server</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>skill_library</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
